Fix focus outline wrapping

--- a/src/components/verification-grid-tile/css/style.css
+++ b/src/components/verification-grid-tile/css/style.css
@@ -30,6 +30,7 @@
   margin-bottom: 0;
   padding: 4px;
   background-color: var(--oe-panel-color);
+  border-radius: inherit;
   overflow: hidden;
 
   /*
